--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ src/js/compiled.js
 src/wasm/compiled.js
 src/wasm/compiled.wasm
 src/wasm/compiled.wasm.map
+src/js/compiled.cjs
+src/wasm/compiled.cjs
